# taller

./: Cargo.toml  README.md  readme.md
TP Grupal - RustiDocs/: .env  Cargo.toml  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  user.acl
TP Grupal - RustiDocs/src/: lib.rs
TP Grupal - RustiDocs/src/app/: mod.rs  utils.rs
TP Grupal - RustiDocs/src/client_lib/: cluster_manager.rs
TP Grupal - RustiDocs/src/cluster/: cluster_node.rs  mod.rs  time_tracker.rs  types.rs  utils.rs
TP Grupal - RustiDocs/src/command/: command_executor.rs  commands.rs  instruction.rs  mod.rs  test.rs  try_from.rs  types.rs  utils.rs
TP Grupal - RustiDocs/src/config/: mod.rs  node_configs.rs
TP Grupal - RustiDocs/src/logs/: aof_logger.rs  log_types.rs  mod.rs
TP Grupal - RustiDocs/src/network/: client_id.rs  client_input.rs  client_output.rs  connection_handler.rs  connection_supervisor.rs  mod.rs  resp_message.rs  resp_parser.rs
TP Grupal - RustiDocs/src/parser/: mod.rs  response_parser.rs
TP Grupal - RustiDocs/src/pubsub/: channel_manager.rs  cluster_communication.rs  distributed_manager.rs  mod.rs
TP Grupal - RustiDocs/src/security/: certificates.rs  crypto.rs  encryption.rs  mod.rs  tls.rs  tls_lite.rs  types.rs
TP Grupal - RustiDocs/src/storage/: data_store.rs  deserializer.rs  disk_loader.rs  (+3 more)
TP Grupal - RustiDocs/tests/: command_integration_tests.rs  persistence_integration_tests.rs  protocol_integration_tests.rs  pubsub_integration_tests.rs  resp_protocol_tests.rs
TP Grupal - RustiDocs/utils/: cleaner.sh  run_integration_tests.sh  tirar_nodo.sh
(+96 files in other folders)
